# codigos-inplasul

./: .gitignore  pyproject.toml
codigos_inplasul/: config.py  gerador.py  janela_principal.py  main.py  ui_janela.py  ui_janela.ui
